2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* richtextbox.cpp|h: stubbed out a ton of stuff.

	* inputmethod.h: New source file - moved the InputMethod class
	here from textbox.h

	* textbox.cpp (OnPropertyChanged): Chain up immediately if it's
	not a TextBox/PasswordBox property.

2010-06-03  Larry Ewing  <lewing@novell.com>

	* uielement.h:
	* uielement.cpp: rename xform_key to uielement_xform_key and
	expose it (temporarily) so that elements can check on this state.

	* shape.cpp: avoid the shape cache completely when there is an
	active paint transform.

2010-06-03  Larry Ewing  <lewing@novell.com>

	* uielement.cpp: attempt to compose the parent relative transforms
	correctly inside ApplyTransform.

	* mediaelement.cpp: add a missing call to ApplyTransform here.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: Fix the LoadedClosure ref/unref issue in a
	  way that doesn't result in us reffing UIElements when
	  they're disposing.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: We need to ref/unref the object in the
	  LoadedClosure otherwise it can be gc'ed between when we add
	  it and when we emit the loaded event.

2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* pipeline.h (Node::.dtor): Fixed to be virtual.

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* application.cpp: Ensure Install is called from a user-initiated
	event (unless unattended) and that OutOfBrowserSettings are 
	available (fix crasher).

2010-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Don't abort again if we already aborted.

2010-06-02  Larry Ewing  <lewing@novell.com>

	* uielement.h:
	* uielement.cpp (Paint): rework the way that the absolute
	transform is applied so that we can pass transforms to Paint.

	* border.cpp:
	* glyphs.cpp:
	* media.cpp:
	* mediaelement.cpp:
	* panel.cpp:
	* shape.cpp:
	* stylus.cpp:
	* textblock.cpp:
	* textbox.cpp: call ::ApplyTransform rather than simply